--- a/index.html
+++ b/index.html
@@ -799,12 +799,12 @@ var head_conf = screensCss: {
 						<td><small><em><strong>4.1K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.core.min.js']);">head.core.min.js</a></td>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.core.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.core.min.js']);">head.core.min.js</a></td>
                         <td>Responsive Design & Feature Detection Only</td>
 						<td><small><em><strong>1.8K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.core.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.load.min.js']);">head.load.min.js</a></td>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.load.min.js']);">head.load.min.js</a></td>
                         <td>JavaScript Loader Only</td>
 						<td><small><em><strong>1.9K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
