--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ var head_conf = screensCss: {
                 <p>                                       
                     <script type="IN/Share"></script>                        
                     <a href="https://twitter.com/share" class="twitter-share-button" data-via="headjs" data-count="none">Tweet</a>
-                    <span class="g-plusone" data-size="medium" data-href="http://headjs.com"></span>
+                    <span class="g-plusone" data-size="medium" data-href="http://headjs.com" data-count="false"></span>
                 </p>
                 <hr />
                 <h3>Issues</h3>
