--- a/index.html
+++ b/index.html
@@ -816,9 +816,11 @@ var head_conf = screensCss: {
                 <p>
                     <strong><a href="https://github.com/headjs/headjs/blob/master/changelog.txt">Release notes</a></strong>
                 </p>
+                <!-- Investigate
                 <p>
                     <strong><a href="test/unit/index.html" target="_blank">Unit Tests</a></strong>
                 </p>
+                -->
                 
 
                 <h4>Spread the word</h4>
