added link to BrowserScope

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -24,7 +24,9 @@
     <body>              
         <div id="qunit"></div>       
         <div id="qunit-userAgent"></div>        
-    
+        <h4>
+            <em>See how other browsers fared with these tests on <a href="http://www.browserscope.org/user/tests/table/agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA?v=3&layout=simple" target="_blank">BrowserScope</a></em>
+        </h4>
         <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.10.0.js"></script>
         <script>QUnit.config.requireExpects = true;</script>
         
