--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -25,8 +25,15 @@
         <div id="qunit"></div>       
         <div id="qunit-userAgent"></div>        
         <h4>
-            <em>See how other browsers fared with these tests on <a href="http://www.browserscope.org/user/tests/table/agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA?v=3&layout=simple" target="_blank">BrowserScope</a></em>
+            <em id="browserscope">See how other browsers fared with these tests on <a href="http://www.browserscope.org/user/tests/table/agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA?v=3&layout=simple" target="_blank">BrowserScope</a></em>
         </h4>
+        <em>
+            If you only get an error on the css test, it might be normal.
+            I haven't quite figured out how to test css properties in a universal way across browsers.
+            Or at leats in a way that they all return the exact same value.
+            If it worked, the background color of the page should be light blue.
+        </em>
+
         <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.10.0.js"></script>
         <script>QUnit.config.requireExpects = true;</script>
         
@@ -56,7 +63,7 @@
             
             // Send browserscope results
             QUnit.done(function (details) {
-                head.load("http://www.browserscope.org/user/beacon/" + "agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA");
+                //head.load("http://www.browserscope.org/user/beacon/" + "agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA");
             });
         </script>
     </body>
