--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -63,7 +63,7 @@
             
             // Send browserscope results
             QUnit.done(function (details) {
-                //head.load("http://www.browserscope.org/user/beacon/" + "agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA");
+                head.load("http://www.browserscope.org/user/beacon/" + "agt1YS1wcm9maWxlcnINCxIEVGVzdBjb-_cSDA");
             });
         </script>
     </body>
