--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             _gaq.push(['b._trackPageview', page]);
         }
     </script>
-    <script src="media/libs/headjs/head.min.js"></script>
+    <script src="media/libs/headjs/0.99/head.min.js"></script>
 </head>
 <body>
     <a href="http://github.com/headjs/headjs" onclick="trackPageView('github.com')">
@@ -854,7 +854,7 @@ var head_conf = screensCss: {
         <a href="http://cloudpanic.com/about.html" target="_blank">Created By: <strong>Tero Piirainen</strong></a> &bull;
         <a href="http://twitter.com/search?q=headjs" target="_blank">Twitter Talk</a> &bull;
         <a href="http://headjs.uservoice.com" target="_blank">Vote for & discuss features</a> &bull;
-        <a href="http://stackoverflow.com/questions/tagged/head.js" target="_blank">Ask questions & find answers</a> &bull;
+        <a href="http://stackoverflow.com/questions/tagged/head.js?sort=newest" target="_blank">Ask questions & find answers</a> &bull;
         <a href="https://github.com/headjs/headjs/issues">Report a bug</a>
     </footer>
     <script>
