--- a/test/headjs-ordered.html
+++ b/test/headjs-ordered.html
@@ -12,15 +12,15 @@
             document.getElementById("ms").innerHTML = (new Date()).getTime() - now.getTime();
         };
     </script>
-    <script src="https://raw.github.com/headjs/headjs/master/dist/head.load.min.js"></script>
+    <script src="../media/libs/headjs/0.99/head.min.js"></script>
     <script>
         head.js(
-            { a: "https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js" },
-            { b: "https://github.com/jquery/jquery-ui/raw/master/jquery-1.8.2.js" },
-            { c: "https://github.com/smith/scripty2/raw/master/lib/prototype.js" },
-            { d: "https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js" },
-            { e: "https://github.com/kosmas58/compass-jquery-plugin/raw/master/lib/jslint.js" });
-
+            { a: "http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.jss" },
+            { b: "http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" },
+            { c: "http://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js" },
+            { d: "http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js" },
+            { e: "http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" });
+        
         head.ready("a", function () {
             if (window.console)
                 console.info("a");
