--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="google-site-verification" content="pqzn85yrum0AY6ugIrX0zoIEazSHL9p09us5yvHwZqw" />
     <title>HeadJS, the only script in your &lt;head&gt;</title>
 
-    <meta name="description" content="Load scripts on demand. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues." />
-    <meta name="keywords" content="labjs, modernizr, parallel script loading, javascript loader, non-blocking javascript, javascript modernizer" />
+    <meta name="description" content="Load scripts and css on demand. Achieve responsive design with CSS that targets different screen resolutions, paths, states and browsers. Detect various browsers and their features. Target HTML5 and CSS3 safely." />
     <meta name="author" content="Tero Piirainen">
     
     <!-- include the stylesheet after headjs -->    
@@ -36,16 +35,16 @@
     </a>    
     <div id="wrap">
         <nav>
-            <a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong>(v 0.98)</strong></a>
+            <a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong>(v 0.99)</strong></a>
         </nav>
         <div id="hero">
             <h1>HEAD<em>JS</em></h1>
             <h2>The only script in your &lt;HEAD&gt;</h2>
             <h3>A tiny script that simplifies, speeds up, and modernizes your site</h3>
             <p>
-                Load scripts on demand.
-                Achieve responsive design with CSS targeting different screen reolutions, paths, states and browsers.
-                Detect browsers & browser features.
+                Load scripts and css on demand.
+                Achieve responsive design with CSS that targets different screen reolutions, paths, states and browsers.
+                Detect various browsers and their features.
                 Target HTML5 and CSS3 safely.                               
                 <br />
                 Make it the only script in your HEAD.
@@ -797,20 +796,20 @@ var head_conf = screensCss: {
 
             <h1>Download</h1>
             <section id="download">
-                <h2>Version 0.98</h2>
+                <h2>Version 0.99</h2>
                 <table>
                     <tr>
-                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.min.js" target="_blank" onclick="trackPageView('download/head.min.js')">head.min.js</a></td>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.99/dist/head.min.js" target="_blank" onclick="trackPageView('download/head.min.js')">head.min.js</a></td>
                         <td>Full Bundle</td>
                         <td><small><em><strong>4.1K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.core.min.js" target="_blank" onclick="trackPageView('download/head.core.min.js')">head.core.min.js</a></td>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.99/dist/head.core.min.js" target="_blank" onclick="trackPageView('download/head.core.min.js')">head.core.min.js</a></td>
                         <td>Responsive Design & Feature Detection Only</td>
                         <td><small><em><strong>1.8K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js" target="_blank" onclick="trackPageView('download/head.load.min.js')">head.load.min.js</a></td>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.99/dist/head.load.min.js" target="_blank" onclick="trackPageView('download/head.load.min.js')">head.load.min.js</a></td>
                         <td>JavaScript Loader Only</td>
                         <td><small><em><strong>1.9K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
