--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>A tiny script that simplifies, speeds up, and modernizes your site</h3>
             <p>
                 Load scripts and css on demand.
-                Achieve responsive design with CSS that targets different screen reolutions, paths, states and browsers.
+                Achieve responsive design with CSS that targets different screen resolutions, paths, states and browsers.
                 Detect various browsers and their features.
                 Target HTML5 and CSS3 safely.                               
                 <br />
