--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js">
 <head>
     <meta charset="utf-8" />
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="pqzn85yrum0AY6ugIrX0zoIEazSHL9p09us5yvHwZqw" />
     <title>HeadJS, the only script in your &lt;head&gt;</title>
 
-    <meta name="description" content="Load scripts and css on demand. Achieve responsive design with CSS that targets different screen resolutions, paths, states and browsers. Detect various browsers and their features. Target HTML5 and CSS3 safely." />
+    <meta name="description" content="Load scripts and stylesheets on demand. Achieve responsive design with CSS that targets different screen resolutions, paths, states and browsers. Detect various browsers and their features. Target HTML5 and CSS3 safely." />
     <meta name="author" content="Tero Piirainen">
     
     <!-- include the stylesheet after headjs -->    
@@ -42,7 +42,7 @@
             <h2>The only script in your &lt;HEAD&gt;</h2>
             <h3>A tiny script that simplifies, speeds up, and modernizes your site</h3>
             <p>
-                Load scripts and css on demand.
+                Load scripts and stylesheets on demand.
                 Achieve responsive design with CSS that targets different screen resolutions, paths, states and browsers.
                 Detect various browsers and their features.
                 Target HTML5 and CSS3 safely.                               
@@ -855,12 +855,6 @@ var head_conf = screensCss: {
                     <span class="g-plusone" data-size="medium" data-href="http://headjs.com" data-count="false"></span>
                 </p>
                 <hr />
-                <h3>Issues</h3>
-                <p>
-                    There is no way to detect if script loading failed in <span class="caps">IE</span>. For that reason a
-                    feature such as <code>head.error()</code> is impossible to implement. When a script <span class="caps">URL</span>
-                    cannot be accessed Head <span class="caps">JS</span> is&nbsp;silent.
-                </p>
                 <h2>Future</h2>
                 <p>
                     Head <span class="caps">JS</span> is rapidly being adopted by a large number of websites all the time. A
