--- a/index.html
+++ b/index.html
@@ -876,11 +876,11 @@ var head_conf = screensCss: {
             </div>
         </div>
         <footer>        
-            <span itemscope="itemscope" itemtype="http://schema.org/Person">
-                <a href="http://cloudpanic.com/about.html" target="_blank" itemprop="url">Created By: <strong itemprop="author">Tero Piirainen</strong></a> &bull;
+            <span itemprop="author" itemscope="itemscope" itemtype="http://schema.org/Person">
+                <a href="http://cloudpanic.com/about.html" target="_blank" itemprop="url">Created By: <strong itemprop="name">Tero Piirainen</strong></a> &bull;
             </span>
-            <span itemscope="itemscope" itemtype="http://schema.org/Person">
-                <a href="http://careers.stackoverflow.com/roberthoffmann" target="_blank" itemprop="url">Maintained By: <strong itemprop="contributor">Robert Hoffmann</strong></a> &bull;
+            <span itemprop="contributor" itemscope="itemscope" itemtype="http://schema.org/Person">
+                <a href="http://careers.stackoverflow.com/roberthoffmann" target="_blank" itemprop="url">Maintained By: <strong itemprop="name">Robert Hoffmann</strong></a> &bull;
             </span>
             <a href="http://twitter.com/search?q=headjs" target="_blank">Twitter Talk</a> &bull;
             <a href="http://headjs.uservoice.com" target="_blank">Feature Requests</a> &bull;
