--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </a>    
         <div id="wrap">
             <nav>
-                <a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong>(v 0.99)</strong></a>
+                <a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="http://www.i-technology.net/search/label/headjs" target="_blank">blog / news</a> &bull;<a href="#download">download <strong>(v 0.99)</strong></a>
             </nav>
             <div id="hero">
                 <h1 itemprop="name">Head<em>JS</em></h1>
@@ -880,12 +880,12 @@ var head_conf = screensCss: {
                 <a href="http://cloudpanic.com/about.html" target="_blank" itemprop="url">Created By: <strong itemprop="name">Tero Piirainen</strong></a> &bull;
             </span>
             <span itemprop="contributor" itemscope="itemscope" itemtype="http://schema.org/Person">
-                <a href="http://careers.stackoverflow.com/roberthoffmann" target="_blank" itemprop="url">Maintained By: <strong itemprop="name">Robert Hoffmann</strong></a> &bull;
+                <a href="http://www.i-technology.net" target="_blank" itemprop="url">Maintained By: <strong itemprop="name">Robert Hoffmann</strong></a> &bull;
             </span>
             <a href="http://twitter.com/search?q=headjs" target="_blank">Twitter Talk</a> &bull;
             <a href="http://headjs.uservoice.com" target="_blank">Feature Requests</a> &bull;
-            <a href="http://stackoverflow.com/questions/tagged/head.js?sort=newest" target="_blank"itemprop="discussionUrl">Community Support</a> &bull;
-            <a href="https://github.com/headjs/headjs/issues">Bug Reports</a>
+            <a href="http://stackoverflow.com/questions/tagged/head.js?sort=newest" target="_blank">Community Support</a> &bull;
+            <a href="https://github.com/headjs/headjs/issues" itemprop="discussionUrl">Bug Reports</a>
         </footer>
         <script>
             head.js("http://www.google-analytics.com/ga.js", "http://platform.linkedin.com/in.js", "http://platform.twitter.com/widgets.js", "https://apis.google.com/js/plusone.js");
