--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,8 @@
         <title>Head.JS, the only script in your HEAD</title>
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,target-densityDpi=device-dpi" />
+        <meta http-equiv="cleartype" content="on" />
         <meta name="google-site-verification" content="pqzn85yrum0AY6ugIrX0zoIEazSHL9p09us5yvHwZqw" />
         
         <meta name="description" content="Load scripts and stylesheets on demand. Achieve responsive design with CSS that targets different screen resolutions, paths, states and browsers. Detect various browsers and their features. Target HTML5 and CSS3 safely." />
